Update notebook on Chapter 1

--- a/1_Exploratory_Data_Analysis.ipynb
+++ b/1_Exploratory_Data_Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "6162876.3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
        "Text(0.5, 0, 'Murder Rate (per 100,000)')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
        "LVLT  0.278626  0.286665  0.260068  0.242199  1.000000"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1106,6 +1106,237 @@
     "<hr>\n",
     "<h3>1.6.1 Scatterplots</h3>\n",
     "<p>Using <code>pandas</code>, specify the marker as <code>$\\u25EF$</code> to visualize it as an open circle for each point.</p>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>T</th>\n",
+       "      <th>CTL</th>\n",
+       "      <th>FTR</th>\n",
+       "      <th>VZ</th>\n",
+       "      <th>LVLT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2012-07-02</th>\n",
+       "      <td>0.422496</td>\n",
+       "      <td>0.140847</td>\n",
+       "      <td>0.070879</td>\n",
+       "      <td>0.554180</td>\n",
+       "      <td>-0.519998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-03</th>\n",
+       "      <td>-0.177448</td>\n",
+       "      <td>0.066280</td>\n",
+       "      <td>0.070879</td>\n",
+       "      <td>-0.025976</td>\n",
+       "      <td>-0.049999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-05</th>\n",
+       "      <td>-0.160548</td>\n",
+       "      <td>-0.132563</td>\n",
+       "      <td>0.055128</td>\n",
+       "      <td>-0.051956</td>\n",
+       "      <td>-0.180000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-06</th>\n",
+       "      <td>0.342205</td>\n",
+       "      <td>0.132563</td>\n",
+       "      <td>0.007875</td>\n",
+       "      <td>0.140106</td>\n",
+       "      <td>-0.359999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-09</th>\n",
+       "      <td>0.136883</td>\n",
+       "      <td>0.124279</td>\n",
+       "      <td>-0.023626</td>\n",
+       "      <td>0.253943</td>\n",
+       "      <td>0.180000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-10</th>\n",
+       "      <td>-0.222436</td>\n",
+       "      <td>-0.190559</td>\n",
+       "      <td>-0.031502</td>\n",
+       "      <td>-0.175133</td>\n",
+       "      <td>-0.619999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-11</th>\n",
+       "      <td>-0.136883</td>\n",
+       "      <td>0.356260</td>\n",
+       "      <td>0.039377</td>\n",
+       "      <td>0.140106</td>\n",
+       "      <td>-0.030001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-12</th>\n",
+       "      <td>-0.145439</td>\n",
+       "      <td>0.265126</td>\n",
+       "      <td>-0.007875</td>\n",
+       "      <td>0.017510</td>\n",
+       "      <td>0.080000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-13</th>\n",
+       "      <td>0.359315</td>\n",
+       "      <td>0.546823</td>\n",
+       "      <td>-0.094506</td>\n",
+       "      <td>0.420316</td>\n",
+       "      <td>0.190001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-16</th>\n",
+       "      <td>0.171101</td>\n",
+       "      <td>0.356264</td>\n",
+       "      <td>0.015751</td>\n",
+       "      <td>0.131350</td>\n",
+       "      <td>0.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-17</th>\n",
+       "      <td>0.410648</td>\n",
+       "      <td>0.497111</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.227670</td>\n",
+       "      <td>-0.339998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-18</th>\n",
+       "      <td>0.384980</td>\n",
+       "      <td>-0.795379</td>\n",
+       "      <td>-0.031502</td>\n",
+       "      <td>0.394047</td>\n",
+       "      <td>0.930001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-19</th>\n",
+       "      <td>-0.316539</td>\n",
+       "      <td>0.546823</td>\n",
+       "      <td>-0.118132</td>\n",
+       "      <td>-0.446585</td>\n",
+       "      <td>-0.129999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-20</th>\n",
+       "      <td>-0.042775</td>\n",
+       "      <td>-0.082854</td>\n",
+       "      <td>0.007875</td>\n",
+       "      <td>0.297725</td>\n",
+       "      <td>-0.149999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-23</th>\n",
+       "      <td>0.325097</td>\n",
+       "      <td>-0.091138</td>\n",
+       "      <td>-0.023626</td>\n",
+       "      <td>0.122592</td>\n",
+       "      <td>0.129999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-24</th>\n",
+       "      <td>-0.710076</td>\n",
+       "      <td>-0.381122</td>\n",
+       "      <td>-0.070879</td>\n",
+       "      <td>-0.525396</td>\n",
+       "      <td>-0.170000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-25</th>\n",
+       "      <td>0.419204</td>\n",
+       "      <td>-0.422544</td>\n",
+       "      <td>-0.007875</td>\n",
+       "      <td>-0.140106</td>\n",
+       "      <td>-1.889999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-26</th>\n",
+       "      <td>0.393536</td>\n",
+       "      <td>0.074567</td>\n",
+       "      <td>-0.015751</td>\n",
+       "      <td>0.192643</td>\n",
+       "      <td>-0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-27</th>\n",
+       "      <td>0.573194</td>\n",
+       "      <td>0.207130</td>\n",
+       "      <td>0.055128</td>\n",
+       "      <td>0.210160</td>\n",
+       "      <td>0.530001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-30</th>\n",
+       "      <td>0.299429</td>\n",
+       "      <td>0.157418</td>\n",
+       "      <td>-0.031502</td>\n",
+       "      <td>0.210160</td>\n",
+       "      <td>0.130001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   T       CTL       FTR        VZ      LVLT\n",
+       "2012-07-02  0.422496  0.140847  0.070879  0.554180 -0.519998\n",
+       "2012-07-03 -0.177448  0.066280  0.070879 -0.025976 -0.049999\n",
+       "2012-07-05 -0.160548 -0.132563  0.055128 -0.051956 -0.180000\n",
+       "2012-07-06  0.342205  0.132563  0.007875  0.140106 -0.359999\n",
+       "2012-07-09  0.136883  0.124279 -0.023626  0.253943  0.180000\n",
+       "2012-07-10 -0.222436 -0.190559 -0.031502 -0.175133 -0.619999\n",
+       "2012-07-11 -0.136883  0.356260  0.039377  0.140106 -0.030001\n",
+       "2012-07-12 -0.145439  0.265126 -0.007875  0.017510  0.080000\n",
+       "2012-07-13  0.359315  0.546823 -0.094506  0.420316  0.190001\n",
+       "2012-07-16  0.171101  0.356264  0.015751  0.131350  0.100000\n",
+       "2012-07-17  0.410648  0.497111  0.000000  0.227670 -0.339998\n",
+       "2012-07-18  0.384980 -0.795379 -0.031502  0.394047  0.930001\n",
+       "2012-07-19 -0.316539  0.546823 -0.118132 -0.446585 -0.129999\n",
+       "2012-07-20 -0.042775 -0.082854  0.007875  0.297725 -0.149999\n",
+       "2012-07-23  0.325097 -0.091138 -0.023626  0.122592  0.129999\n",
+       "2012-07-24 -0.710076 -0.381122 -0.070879 -0.525396 -0.170000\n",
+       "2012-07-25  0.419204 -0.422544 -0.007875 -0.140106 -1.889999\n",
+       "2012-07-26  0.393536  0.074567 -0.015751  0.192643 -0.500000\n",
+       "2012-07-27  0.573194  0.207130  0.055128  0.210160  0.530001\n",
+       "2012-07-30  0.299429  0.157418 -0.031502  0.210160  0.130001"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "telecom.head(20)"
    ]
   },
   {
