Update notebook with notes on Normal Distribution

--- a/2_Data_and_Sampling_Distributions.ipynb
+++ b/2_Data_and_Sampling_Distributions.ipynb
@@ -214,6 +214,7 @@
     "</ul>\n",
     "</p>\n",
     "</div>\n",
+    "<hr>\n",
     "<h2>2.3 The Bootstrap</h2>\n",
     "<p>The <i>bootstrap</i> procedure consists on drawing additional samples, with replacement, from the sample and recalculate the statistic or model for each resample. Basically, you would replicate the original sample many times for the purpose of estimating a sampling distribution.</p>\n",
     "<p>Let's see its application in Python with <code>scikit-learn</code>'s <code>resample</code> method.</p>"
@@ -342,7 +343,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p><i>Figure 2-9. Bootstrap confidence interval for the annual income of loan applicants, based on sample of 20</i<></p>"
+    "<p><i>Figure 2-9. Bootstrap confidence interval for the annual income of loan applicants, based on sample of 20</i></p>\n",
+    "<hr>\n",
+    "<h2>2.5 Normal Distribution</h2>\n",
+    "<div style=\"background: lightblack; \n",
+    "            font-size: 16px; \n",
+    "            padding: 10px; \n",
+    "            border: 1px solid lightgray; \n",
+    "            margin: 10px;\">\n",
+    "  <h4><strong>Key Terms:</strong></h4>\n",
+    "<ul>\n",
+    "<li><strong>Error</strong>: The difference between a data point and a predicted or average variable.</li>\n",
+    "<li><strong>Standardize</strong>: Subtract the mean and divide it by the standard deviation.</li>\n",
+    "<li><strong>z-score</strong>: The result of standardizing an individual data point.</li>\n",
+    "<li><strong>Standard normal</strong>: A normal distribution when mean = 0 and standard deviation = 1.\n",
+    "<li><strong>QQ-Plot</strong>: A plot to visualize how close a sample is to a specified distribution, for example, the normal distribution.</ul>\n",
+    "</p>\n",
+    "</div>\n",
+    "<p><strong>Reminder</strong>: most data are <i>not</i> normally distributed. What actually happens is that their <strong>sampling distribution</strong> statistics are normalized.\n",
+    "<h3>2.4.1 Standard Normal and QQ-Plots</h3>\n",
+    "<p>A <i>standard normal distribution</i> means the units on the x-axis of a graph are represented in terms of <strong>standard deviations</strong> away from the mean. The process of <i>normalization</i>, that is, of subtracting the mean and dividing by the standard deviation, results in a value called <i>z-score</i>, while the normal distribution is sometimes called the <i>z-distribution</i>.</p>"
    ]
   },
   {
